--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,7 +47,7 @@ body {
   font-family: "Rubik", sans-serif;
   font-size: 15px;
   font-weight: 400;
-  color: #9b9b9b;
+  color: #838282;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -1081,6 +1081,7 @@ select {
   left: 0;
   overflow: hidden;
   z-index: -100;
+ 
 }
 
 
