--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1081,8 +1081,9 @@ select {
   left: 0;
   overflow: hidden;
   z-index: -100;
-  max-width: 100%;
-  height: 100%;
+  width: 100%;
+  height: auto;
+  aspect-ratio: attr(width) / attr(height);
 }
 
 
